# gst-wlrsrc

./: .gitignore  CMakeLists.txt  README.md  wlrsrc.cpp
